add get users by username and email
