# src/books/book.type.ts
@@ -1,8 +1,14 @@
 export type Book = {
     _id?: string; // Optional, as it will be generated by MongoDB
     title: string;
-    author: string;
+    author: string[];
     genre: string[];
     url_image: string;
     isbn?: string; // Optional field for ISBN number
+    language?: string; // Optional field for language
+    description?: string; // Optional field for description
+    publishedDate?: string; // Optional field for published date
+    publisher?: string; // Optional field for publisher
+    pages?: number; // Optional field for number of pages
+
 };
